--- a/index.html
+++ b/index.html
@@ -99,6 +99,23 @@
                 </div>
             </section>
 
+<section class="event-section">
+    <div class="box-header">注目のイベント情報</div>
+    <ul class="event-list">
+        <li>
+            <span class="event-date">1/5(日)</span>
+            <span class="event-title">【若狭市】新春・大凧揚げ大会（若狭中央公園）</span>
+        </li>
+        <li>
+            <span class="event-date">1/12(日)</span>
+            <span class="event-title">【江崎市】寒ブリ祭り・即売会（江崎漁港）</span>
+        </li>
+        <li>
+            <span class="event-date">1/18(土)</span>
+            <span class="event-title">【折鷲市】冬の星座観測会（折鷲高原レジャーランド）</span>
+        </li>
+    </ul>
+</section>
         </main>
 
         <aside class="sidebar-right">
