--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="mission-box" id="mission-area" style="display: none;">
         <button id="get-point-btn">🎁 今日の来県ポイントをもらう</button>
     </div>
-
+    <span style="margin: 1px;"></span>
     <div class="ad-area">
         <div class="ad-banner">
             <p>【求人】海が見えるオフィス</p>
