--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <div class="ad-area">
         <div class="ad-banner">
             <p>【求人】海が見えるオフィス</p>
+            <p>詳細はこちらから</p>
             <strong>江崎ITパーク</strong>
         </div>
     </div>
