--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <p>詳細はこちらから</p>
             <strong>江崎ITパーク</strong>
         </div>
-        <div class="ad-banner">
+        <div class="ad-banner2">
             <p>心にしまった夢、もう一度かなえてみませんか？</p>
             <p>伊舟山バスでは運転手を募集しております。</p>
             <strong>伊舟山交通</strong>
