--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     </div>
     <span style="margin: 1px;"></span>
     <div class="ad-area">
+        <div class="box-header2">広告エリア</div>
         <div class="ad-banner">
             <p>【求人】海が見えるオフィス</p>
             <p>詳細はこちらから</p>
