--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
                 <h3>▼ くらしの便利ツール</h3>
                 <div class="tool-grid">
                     <div class="tool-item">
+                        <a href="./gomidashi.html">
                         <div class="icon">🗑️</div>
                         <div class="label">ゴミ出し</div>
+                        </a>
                     </div>
                     <div class="tool-item">
                         <div class="icon">🏥</div>
