--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     <footer>
         <p class="copyright">Copyright (C) 2025 WAKASA Prefecture Portal. All Rights Reserved.</p>
         <p class="disclaimer">※このサイトは架空のものです。</p>
+        <a style="color: rgb(87, 182, 255);" href="https://fictional-railway.github.io/myrailways/">架空鉄道一覧はこちらから</a><br><br>
     </footer>
 
     <script src="script.js"></script>
