--- a/index.html
+++ b/index.html
@@ -36,28 +36,39 @@
     <div class="main-container">
         
         <nav class="sidebar-left">
-            <div class="box-header">主要エリア</div>
+            <div class="box-header">主要エリア（三都）</div>
             <ul class="link-list">
-                <li><a href="#">若狭市（県庁）</a></li>
+                <li><a href="#">若狭市</a></li>
                 <li><a href="#">兵府市</a></li>
-                <li><a href="#">北陵市</a></li>
-                <li><a href="#">白央市</a></li>
-                <li><a href="#">入塚市</a></li>
+                <li><a href="#">物部市</a></li>
             </ul>
 
             <div class="box-header">沿岸エリア</div>
             <ul class="link-list">
+                <li><a href="#">香津村</a></li>
                 <li><a href="#">渡町</a></li>
-                <li><a href="#">江崎市</a></li>
                 <li><a href="#">汐崖町</a></li>
-                <li><a href="#">物部市</a></li>
+                <li><a href="#">伊舟市</a></li>
+                <li><a href="#">早手川町</a></li>
+                <li><a href="#">矢坂町</a></li>
+                <li><a href="#">江崎市</a></li>
+                <li><a href="#">葉が山町</a></li>
             </ul>
 
-            <div class="box-header">山間エリア</div>
+            <div class="box-header">中部・南部エリア</div>
             <ul class="link-list">
-                <li><a href="#">深山市</a></li>
+                <li><a href="#">甲日市</a></li>
+                <li><a href="#">氏川町</a></li>
                 <li><a href="#">徳峰町</a></li>
+                <li><a href="#">入塚市</a></li>
+                <li><a href="#">深山町</a></li>
                 <li><a href="#">折鷲市</a></li>
+                <li><a href="#">北陵市</a></li>
+                <li><a href="#">白央市</a></li>
+                <li><a href="#">千鳴村</a></li>
+                <li><a href="#">朝渕村</a></li>
+                <li><a href="#">丹谷町</a></li>
+                <li><a href="#">小桟田町</a></li>
             </ul>
         </nav>
 
@@ -81,7 +92,7 @@
                 <h3>▼ くらしの便利ツール</h3>
                 <div class="tool-grid">
                     <div class="tool-item">
-                        <a href="./gomidashi.html">
+                        <a style="text-decoration: none;" href="./gomidashi.html">
                         <div class="icon">🗑️</div>
                         <div class="label">ゴミ出し</div>
                         </a>
@@ -147,9 +158,11 @@
             <strong>江崎ITパーク</strong>
         </div>
         <div class="ad-banner2">
+            <a style="text-decoration: none; text-align: center; display: block; color: #595959;" href="https://fictional-railway.github.io/Ifunesan-Bus/">
             <p>心にしまった夢、もう一度かなえてみませんか？</p>
             <p>伊舟山バスでは運転手を募集しております。</p>
             <strong>伊舟山交通</strong>
+            </a>
         </div>
     </div>
 </aside>
