--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </section>
 
             <section class="event-section">
-                <div class="box-header">注目のイベント情報</div>
+                <div class="box-header">県内のイベント情報</div>
                 <ul class="event-list">
                     <li>
                         <span class="event-date">1/5(日)</span>
