--- a/gomidashi.html
+++ b/gomidashi.html
@@ -50,7 +50,7 @@
     <div class="status-bar">
         <span class="label">インフラ情報</span>
         <marquee scrollamount="5" class="ticker">
-            【鉄道】県内路線：通常運転　【道路】三都高速道路：兵府IC付近で工事渋滞　【電力】県内全域：安定供給中　【行政】兵府市役所：本日は20時まで窓口延長
+            【鉄道】県内路線：通常運転　【道路】大きな渋滞等はなし【電力】県内全域：安定供給中　【行政】兵府市役所：本日は20時まで窓口延長
         </marquee>
     </div>
 
