--- a/news003.html
+++ b/news003.html
@@ -28,7 +28,7 @@
     <div class="status-bar">
         <span class="label">インフラ情報</span>
         <marquee scrollamount="5" class="ticker">
-            【会員情報】システムメンテナンスのお知らせ：来月1日 AM2:00〜AM4:00
+            【鉄道】県内路線：通常運転　【道路】大きな渋滞等はなし【電力】県内全域：安定供給中　【行政】兵府市役所：本日は20時まで窓口延長
         </marquee>
     </div>
 
