--- a/news001.html
+++ b/news001.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>新規会員登録 - WAKASA!</title>
+    <title>若狭市と兵府市、「双子都市構想」で同意 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
