--- a/news002.html
+++ b/news002.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>【速報】入塚市で国内最古級の土器発見 - WAKASA!</title>
+    <title>【速報】入塚市・深山遺跡で国内最古級の土器片を発見 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
