--- a/news004.html
+++ b/news004.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北陵～白央を結ぶバイパストンネル、開通式典 - WAKASA!</title>
+    <title>江崎市名産「若狭サバ」が過去最高値を更新、1匹1万2000円 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
