--- a/news005.html
+++ b/news005.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北陵～白央を結ぶバイパストンネル、開通式典 - WAKASA!</title>
+    <title>国道563号・高生交差点付近で乗用車4台絡む事故、7人が重軽傷 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
