--- a/news006.html
+++ b/news006.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北陵～白央を結ぶバイパストンネル、開通式典 - WAKASA!</title>
+    <title>三都高速道路「物部スマートIC」の設置工事が完了、来月1日から運用開始 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
