--- a/news007.html
+++ b/news007.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北陵～白央を結ぶバイパストンネル、開通式典 - WAKASA!</title>
+    <title>若狭医科大学、指定難病の新たな遺伝子治療法で臨床試験に成功 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
