--- a/news008.html
+++ b/news008.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北陵～白央を結ぶバイパストンネル、開通式典 - WAKASA!</title>
+    <title>葉が山駅前の老舗雑貨店「風天楼」が閉店、56年の歴史に幕 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
