--- a/news011.html
+++ b/news011.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北陵～白央を結ぶバイパストンネル、開通式典 - WAKASA!</title>
+    <title>国鉄三都線・立幹駅で人身事故　上下線で1時間半運転見合わせ、3万人に影響 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
