--- a/news009.html
+++ b/news009.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北陵～白央を結ぶバイパストンネル、開通式典 - WAKASA!</title>
+    <title>特殊詐欺を防いだ中学生3人に署長感謝状　「放っておけなかった」 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
