--- a/news010.html
+++ b/news010.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北陵～白央を結ぶバイパストンネル、開通式典 - WAKASA!</title>
+    <title>県営鉄道・馬土川線で「自動運転」の公開走行試験に成功　都市型鉄道の無人化へ - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
