--- a/news501.html
+++ b/news501.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>北陵～白央を結ぶバイパストンネル、開通式典 - WAKASA!</title>
+    <title>深山町で「移動式スーパー」試験運行開始、買い物難民を支援 - WAKASA!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
