--- a/news.html
+++ b/news.html
@@ -18,12 +18,52 @@
         </div>
     </header>
 
-    <div class="status-bar2">
-        <span class="label2">ライブ天気予報</span>
-        <marquee scrollamount="3" class="weather-ticker" id="weather-display">
-            データを取得中... [沿岸(敦賀)]: --℃ / -- [中央(小浜)]: --℃ / -- [南部(舞鶴)]: --℃ / --
-        </marquee>
-    </div>
+        <div class="status-bar2">
+    <span class="label2">ライブ天気予報</span>
+    <marquee scrollamount="3" class="weather-ticker" id="weather-display">
+        データを取得中...
+    </marquee>
+</div>
+
+<script>
+async function updateWeather() {
+    // 緯度・経度の設定（沿岸=敦賀付近, 中央=小浜付近, 南部=舞鶴付近）
+    const locations = [
+        { label: "沿岸", lat: 35.64, lon: 136.06 },
+        { label: "中央", lat: 35.49, lon: 135.74 },
+        { label: "南部", lat: 35.47, lon: 135.33 }
+    ];
+
+    // 天気コードを日本語に変換するマップ
+    const weatherCodes = {
+        0: "晴れ", 1: "概ね晴れ", 2: "時々曇り", 3: "曇り",
+        45: "霧", 48: "霧", 51: "小雨", 53: "雨", 55: "雨",
+        61: "雨", 63: "雨", 65: "強い雨", 71: "雪", 73: "雪", 75: "大雪",
+        80: "にわか雨", 81: "強いにわか雨", 82: "激しい雨", 95: "雷雨"
+    };
+
+    try {
+        const results = await Promise.all(locations.map(async (loc) => {
+            const response = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${loc.lat}&longitude=${loc.lon}&current_weather=true&timezone=Asia%2FTokyo`);
+            const data = await response.json();
+            const temp = Math.round(data.current_weather.temperature);
+            const condition = weatherCodes[data.current_weather.weathercode] || "不明";
+            return `[${loc.label}]${condition} ${temp}℃`;
+        }));
+
+        // 取得したデータを marquee に反映
+        document.getElementById('weather-display').innerText = results.join(' / ');
+    } catch (error) {
+        document.getElementById('weather-display').innerText = "データ取得に失敗しました";
+        console.error("Weather API Error:", error);
+    }
+}
+
+// ページ読み込み時に実行
+updateWeather();
+// 30分ごとに更新（1800000ミリ秒）
+setInterval(updateWeather, 1800000);
+</script>
 
     <div class="status-bar">
         <span class="label">インフラ情報</span>
