--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ setInterval(updateWeather, 1800000);
         <nav class="sidebar-left">
             <div class="box-header">主要エリア（三都）</div>
             <ul class="link-list">
-                <li><a href="#">若狭市</a></li>
-                <li><a href="#">兵府市</a></li>
+                <li><a href="./Town Pages/wakasa.html">若狭市</a></li>
+                <li><a href="./Town Pages/byobu.html">兵府市</a></li>
                 <li><a href="#">物部市</a></li>
             </ul>
 
@@ -192,9 +192,11 @@ setInterval(updateWeather, 1800000);
             <div class="ad-area">
                 <div class="box-header2">広告エリア</div>
                 <div class="ad-banner">
+                    <a style="text-decoration: none; text-align: center; display: block; color: #595959;" href="https://fictional-railway.github.io/Ezaki-ITpark">
                     <p>【求人】海が見えるオフィス</p>
                     <p>詳細はこちらから</p>
                     <strong>江崎ITパーク</strong>
+                    </a>
                 </div>
                 <div class="ad-banner2">
                     <a style="text-decoration: none; text-align: center; display: block; color: #595959;" href="https://fictional-railway.github.io/Ifunesan-Bus/">
@@ -203,6 +205,14 @@ setInterval(updateWeather, 1800000);
                         <strong>伊舟山交通</strong>
                     </a>
                 </div>
+                <div class="ad-banner2">
+                    <a style="text-decoration: none; text-align: center; display: block; color: #595959;" href="https://fictional-railway.github.io/Ifunesan-Bus/">
+                        <p>この冬は汐崖温泉街へ！</p>
+                        <p>現在汐崖町全商業施設で冬割実施中</p>
+                        <strong style="color: darkgreen;">汐崖町/汐崖温泉協会/<span style="color: #0b81ff;">若狭海岸鉄道/<span style="color: #000;">日本国有鉄道</span></strong>
+                    </a>
+                </div>
+                
             </div>
         </aside>
 
