--- a/news010.html
+++ b/news010.html
@@ -75,8 +75,8 @@ setInterval(updateWeather, 1800000);
         <nav class="sidebar-left">
             <div class="box-header">主要エリア（三都）</div>
             <ul class="link-list">
-                <li><a href="#">若狭市</a></li>
-                <li><a href="#">兵府市</a></li>
+                <li><a href="./Town Pages/wakasa.html">若狭市</a></li>
+                <li><a href="./Town Pages/byobu.html">兵府市</a></li>
                 <li><a href="#">物部市</a></li>
             </ul>
 
