--- a/index.html
+++ b/index.html
@@ -114,18 +114,21 @@ setInterval(updateWeather, 1800000);
         <main class="content-center">
             
             <section class="news-section">
-                <div class="news-header">
-                    <h2>若狭トピックス</h2>
-                    <span class="update-time">最終更新: <span id="last-update">--:--</span></span>
-                </div>
-                <div class="tabs">
-                    <button class="tab active" data-category="main">主要</button>
-                    <button class="tab" data-category="local">地域</button>
-                    <button class="tab" data-category="economy">経済</button>
-                </div>
-                <ul class="news-list" id="news-container">
-                    </ul>
-            </section>
+    <div class="news-header">
+        <h2>若狭トピックス</h2>
+        <span class="update-time">最終更新: <span id="last-update">--:--</span></span>
+    </div>
+    <div class="tabs">
+        <button class="tab active" data-category="main">主要</button>
+        <button class="tab" data-category="local">地域</button>
+        <button class="tab" data-category="economy">経済</button>
+    </div>
+    <ul class="news-list" id="news-container">
+        </ul>
+    <div id="more-link-container" style="text-align: right; padding: 5px 10px; font-size: 12px; background: #f9f9f9; border-top: 1px dotted #ccc;">
+        <a href="news.html" id="more-link" style="color: #0033cc; text-decoration: none;">（もっと見る…）</a>
+    </div>
+</section>
 
             <section class="tools-section">
                 <h3>▼ くらしの便利ツール</h3>
