--- a/gomidashi.html
+++ b/gomidashi.html
@@ -100,7 +100,7 @@ setInterval(updateWeather, 1800000);
             <div class="box-header">主要エリア（三都）</div>
             <ul class="link-list">
                 <li><a href="./Town Pages/wakasa.html">若狭市</a></li>
-                <li><a href="#">兵府市</a></li>
+                <li><a href="./Town Pages/byobu.html">兵府市</a></li>
                 <li><a href="#">物部市</a></li>
             </ul>
 
