--- a/Town Pages/mononobe.html
+++ b/Town Pages/mononobe.html
@@ -109,10 +109,10 @@
                     <p style="margin:0; font-weight: bold;">物部重工 株式会社</p>
                     <p style="margin:5px 0; font-size: 10px;">世界へ届ける、物部の技術。<br>【中途採用強化中】</p>
                 </div>
-                <div class="ad-banner2">
-                    <p>冬の味覚、解禁！</p>
-                    <p><b>物部カニ祭り</b> 開催中</p>
-                    <p style="font-size: 10px;">会場：物部中央市場</p>
+                <div class="ad-banner">
+                    <p>【不動産】彦崎タワーレジデンス</p>
+                    <p>トラム彦崎駅直結・最終分譲中</p>
+                    <strong>彦崎タワーレジデンス</strong>
                 </div>
             </div>
 
