--- a/Town Pages/mononobe.html
+++ b/Town Pages/mononobe.html
@@ -37,9 +37,9 @@
         <nav class="sidebar-left">
             <div class="box-header">主要エリア（三都）</div>
             <ul class="link-list">
-                <li><a href="wakasa.html">若狭市</a></li>
-                <li><a href="byobu.html">兵府市</a></li>
-                <li><a href="mononobe.html">物部市</a></li>
+                <li><a href="./Town Pages/wakasa.html">若狭市</a></li>
+                <li><a href="./Town Pages/byobu.html">兵府市</a></li>
+                <li><a href="./Town Pages/mononobe.html">物部市</a></li>
             </ul>
 
             <div class="box-header">沿岸エリア</div>
@@ -49,6 +49,25 @@
                 <li><a href="#">汐崖町</a></li>
                 <li><a href="#">伊舟市</a></li>
                 <li><a href="#">早手川町</a></li>
+                <li><a href="#">矢坂町</a></li>
+                <li><a href="#">江崎市</a></li>
+                <li><a href="#">葉が山町</a></li>
+            </ul>
+
+            <div class="box-header">中部・南部エリア</div>
+            <ul class="link-list">
+                <li><a href="#">甲日市</a></li>
+                <li><a href="#">氏川町</a></li>
+                <li><a href="#">徳峰町</a></li>
+                <li><a href="#">入塚市</a></li>
+                <li><a href="#">深山町</a></li>
+                <li><a href="#">折鷲市</a></li>
+                <li><a href="#">北陵市</a></li>
+                <li><a href="#">白央市</a></li>
+                <li><a href="#">千鳴村</a></li>
+                <li><a href="#">朝渕村</a></li>
+                <li><a href="#">丹谷町</a></li>
+                <li><a href="#">小桟田町</a></li>
             </ul>
         </nav>
 
