--- a/Town Pages/wakasa.html
+++ b/Town Pages/wakasa.html
@@ -37,9 +37,9 @@
         <nav class="sidebar-left">
             <div class="box-header">主要エリア（三都）</div>
             <ul class="link-list">
-                <li><a href="wakasa.html">若狭市</a></li>
-                <li><a href="#">兵府市</a></li>
-                <li><a href="#">物部市</a></li>
+                <li><a href="./Town Pages/wakasa.html">若狭市</a></li>
+                <li><a href="./Town Pages/byobu.html">兵府市</a></li>
+                <li><a href="./Town Pages/mononobe.html">物部市</a></li>
             </ul>
 
             <div class="box-header">沿岸エリア</div>
@@ -73,16 +73,16 @@
 
         <main class="content-center">
             
-            <section class="city-intro-section" style="border: 1px solid #ccc; padding: 15px; background: #fdfdfd; margin-bottom: 20px;">
-                <h2 style="margin-top: 0; color: #0033cc; border-bottom: 2px solid #0033cc;">若狭市へようこそ</h2>
+            <section class="city-intro-section" style="border: 1px solid #ccc; padding: 15px; background: #fdfaf5; margin-bottom: 20px; border-left: 10px solid #001b66;">
+                <h2 style="margin-top: 0; color: #001b66; border-bottom: 2px solid #001b66;">物部市 <span style="font-size: 0.6em; color: #666666;">Mononobe City</span></h2>
                 <p>若狭市の中心に位置する県庁所在地であり、人口100万人を超える政令指定都市です。9の行政区を持ち、経済・文化の中枢として発展し続けています。</p>
                 
                 <table style="width: 100%; font-size: 12px; border-collapse: collapse; margin-top: 10px;">
                     <tr>
                         <th style="background: #eee; border: 1px solid #ccc; padding: 5px; width: 20%;">人口</th>
-                        <td style="border: 1px solid #ccc; padding: 5px;">1,050,321人（2025年12月現在）</td>
-                        <th style="background: #eee; border: 1px solid #ccc; padding: 5px; width: 20%;">世帯数</th>
-                        <td style="border: 1px solid #ccc; padding: 5px;">482,100世帯</td>
+                        <td style="border: 1px solid #ccc; padding: 5px;">約147万人</td>
+                        <th style="background: #eee; border: 1px solid #ccc; padding: 5px; width: 20%;">名産品</th>
+                        <td style="border: 1px solid #ccc; padding: 5px;">物部ガニ・鉄鋼製品</td>
                     </tr>
                 </table>
             </section>
