--- a/news.html
+++ b/news.html
@@ -79,7 +79,7 @@ setInterval(updateWeather, 1800000);
             <ul class="link-list">
                 <li><a href="./Town Pages/wakasa.html">若狭市</a></li>
                 <li><a href="./Town Pages/byobu.html">兵府市</a></li>
-                <li><a href="#">物部市</a></li>
+                <li><a href="./Town Pages/mononobe.html">物部市</a></li>
             </ul>
 
             <div class="box-header">沿岸エリア</div>
