--- a/Town Pages/wakasa.html
+++ b/Town Pages/wakasa.html
@@ -74,8 +74,8 @@
         <main class="content-center">
             
             <section class="city-intro-section" style="border: 1px solid #ccc; padding: 15px; background: #fdfaf5; margin-bottom: 20px; border-left: 10px solid #001b66;">
-                <h2 style="margin-top: 0; color: #001b66; border-bottom: 2px solid #001b66;">物部市 <span style="font-size: 0.6em; color: #666666;">Mononobe City</span></h2>
-                <p>若狭市の中心に位置する県庁所在地であり、人口100万人を超える政令指定都市です。9の行政区を持ち、経済・文化の中枢として発展し続けています。</p>
+                <h2 style="margin-top: 0; color: #001b66; border-bottom: 2px solid #001b66;">若狭市 <span style="font-size: 0.6em; color: #404569;">Mononobe City</span></h2>
+                <p>若狭県の西端に位置する県庁所在地であり、人口100万人を超える政令指定都市です。9の行政区を持ち、経済・文化の中枢として発展し続けています。</p>
                 
                 <table style="width: 100%; font-size: 12px; border-collapse: collapse; margin-top: 10px;">
                     <tr>
