--- a/Town Pages/watari.html
+++ b/Town Pages/watari.html
@@ -28,7 +28,7 @@
     <div class="status-bar">
         <span class="label">インフラ情報</span>
         <marquee scrollamount="5" class="ticker">
-            【農業】渡町農協：特産「渡米（わたりまい）」の新米出荷がピークを迎えています　【交通】海岸通り：農繁期につきトラクターの走行にご注意ください　【宿泊】渡民宿街：今週末の空室状況は残りわずかとなっています
+            【鉄道】県内路線：通常運転　【道路】三都高速道路：兵府IC付近で工事渋滞　【電力】県内全域：安定供給中　【行政】兵府市役所：本日は20時まで窓口延長
         </marquee>
     </div>
 
