--- a/index.html
+++ b/index.html
@@ -79,35 +79,35 @@ setInterval(updateWeather, 1800000);
             <ul class="link-list">
                 <li><a href="./Town Pages/wakasa.html">若狭市</a></li>
                 <li><a href="./Town Pages/byobu.html">兵府市</a></li>
-                <li><a href="#">物部市</a></li>
+                <li><a href="./Town Pages/mononobe.html">物部市</a></li>
             </ul>
 
             <div class="box-header">沿岸エリア</div>
             <ul class="link-list">
-                <li><a href="#">香津村</a></li>
-                <li><a href="#">渡町</a></li>
-                <li><a href="#">汐崖町</a></li>
-                <li><a href="#">伊舟市</a></li>
-                <li><a href="#">早手川町</a></li>
-                <li><a href="#">矢坂町</a></li>
-                <li><a href="#">江崎市</a></li>
-                <li><a href="#">葉が山町</a></li>
+                <li><a href="./Town Pages/kouzu.html">香津村</a></li>
+                <li><a href="./Town Pages/wakasa.html">渡町</a></li>
+                <li><a href="./Town Pages/shiogai.html">汐崖町</a></li>
+                <li><a href="./Town Pages/ifune.html">伊舟市</a></li>
+                <li><a href="./Town Pages/hayategawa.html">早手川町</a></li>
+                <li><a href="./Town Pages/yazaka.html">矢坂町</a></li>
+                <li><a href="./Town Pages/ezaki.html">江崎市</a></li>
+                <li><a href="./Town Pages/hagayama.html">葉が山町</a></li>
             </ul>
 
             <div class="box-header">中部・南部エリア</div>
             <ul class="link-list">
-                <li><a href="#">甲日市</a></li>
-                <li><a href="#">氏川町</a></li>
-                <li><a href="#">徳峰町</a></li>
-                <li><a href="#">入塚市</a></li>
-                <li><a href="#">深山町</a></li>
-                <li><a href="#">折鷲市</a></li>
-                <li><a href="#">北陵市</a></li>
-                <li><a href="#">白央市</a></li>
-                <li><a href="#">千鳴村</a></li>
-                <li><a href="#">朝渕村</a></li>
-                <li><a href="#">丹谷町</a></li>
-                <li><a href="#">小桟田町</a></li>
+                <li><a href="./Town Pages/kouhi.html">甲日市</a></li>
+                <li><a href="./Town Pages/shikawa.html">氏川町</a></li>
+                <li><a href="./Town Pages/tokumine.html">徳峰町</a></li>
+                <li><a href="./Town Pages/irizuka.html">入塚市</a></li>
+                <li><a href="./Town Pages/fukayama.html">深山町</a></li>
+                <li><a href="./Town Pages/orisagi.html">折鷲市</a></li>
+                <li><a href="./Town Pages/hokuryo.html">北陵市</a></li>
+                <li><a href="./Town Pages/shirao.html">白央市</a></li>
+                <li><a href="./Town Pages/chinari.html">千鳴村</a></li>
+                <li><a href="./Town Pages/asabuchi.html">朝渕村</a></li>
+                <li><a href="./Town Pages/nikoku.html">丹谷町</a></li>
+                <li><a href="./Town Pages/kosanda.html">小桟田町</a></li>
             </ul>
         </nav>
 
